Fixed text flicker from carousel in safari

--- a/themes/the-dream-bed/css/custom.css
+++ b/themes/the-dream-bed/css/custom.css
@@ -120,6 +120,10 @@ body {
 	text-align: left;
 }
 
+.carousel-inner {
+  -webkit-transform-style: preserve-3d;
+}
+
 .carousel h1 {
 	font-family: "ThirstySoftRegular", cursive;
 	text-transform: lowercase;
